[metadata]
name = billing_web
version = 1.0.0
summary = Billing center and payment
description-file =
    README.rst
author = stcloud
author-email = wangzy@stcloud.cn
home-page = http://www.stcloud.cn/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Internet :: WWW/HTTP

[global]

[files]
packages =
    billing_center
    billing_payment

[nosetests]
verbosity=2
detailed-errors=1
